--- a/src/styles/AccountInfo.scss
+++ b/src/styles/AccountInfo.scss
@@ -1,49 +1,43 @@
 @import "./Constants.scss";
 
 .AccountInfo{
-  display: inline-block;
-  height: 100%;
-  display: flex;
+    position: absolute;
+    right: 60px;
+    height: $headerHeight;
 
-  &__balance{
-    text-align: left;
-    font-family: 'Roboto';
-    display: flex;
-    flex-direction: column;
-    margin-top: 25px;
-  }
-
-  &__balance-header{
-    font-size: 14px;
-    margin: 0;
-  }
-
-  &__balance--is-loading{
-    margin: 0 auto;
-  }
-
-  &__balance-info{
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    margin-top: 5px;
-
-    & svg:nth-child(3){
-      margin-left: 5px;
+    &__balance{
+	    text-align: right;
+	    height: $headerHeight;
+	    float: left;
+	    position: relative;
+	    margin-right: 20px;
     }
 
-    & span{
-      margin: 0px 5px;
+    &__balance-header{
+        font-size: 18px;
+        padding-top: 25px;
+        position: relative;
+        top: 2px;
+        display: inherit;
     }
-  }
 
-  &__balance-myb{
-    padding-right: 10px;
-  }
+    &__balance--is-loading{
+        top: 42px;
+        position: absolute;
+        right: 15px;
+    }
 
-  &__address{
-    float: left;
-    margin-top: 25px;
-  }
+    &__balance-info{
+        font-size: 14px;
+    }
+
+    &__balance-myb{
+        padding-right: 10px;
+    }
+
+    &__address{
+      float: left;
+      margin-top: 25px;
+    }
 
 }
