--- a/src/styles/AppHeader.scss
+++ b/src/styles/AppHeader.scss
@@ -2,68 +2,24 @@
 
 .AppHeader {
     height: $headerHeight;
-    background-image: linear-gradient(64deg, #001358, #125ac4);
+    background-image: linear-gradient(to right, #0b3f9c, #2e58db);;
     margin: 0px 0px;
     color: white;
-    overflow: hidden;
-    display: flex;
-    position: relative;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    &__logo-and-info{
-      display: flex;
-      align-items: center;
-      float: left;
-      height: 100%;
-      flex-wrap: wrap;
-    }
-
-    &__Logo-contaner {
-      display: inline-block;
-      padding-right: 65px;
-
-      & svg{
-        height: 100%;
-        width: 100%;
-      }
-    }
 
     &__logo {
-      padding-top: 10px;
-      padding-left: 20px;
+        padding: 0 25px;
+        margin: auto 0;
+        height: 73px;
     }
 
     &__exchange-rate{
-      font-size: 14px;
-      padding-right: 30px;
-      display: flex;
-      flex-direction: column;
-      margin-top: 25px;
-
-      b{
-        margin-top: 4px;
-
-        span{
-          color: #24f281;
-        }
-      }
+        line-height: $headerHeight;
+        font-size: 14px;
     }
 
     &__exchange-rate--is-loading{
-      margin: 0 auto;
-    }
-    &__tokenprice-label {
-      margin: 0;
-      font-size: 14px;
-
-      &--is-red{
-        color: red !important;
-      }
-    }
-    &__rate-container {
-        display: inline-block;
-        height: 100%;
-        display: flex;
+        float: left;
+        top: 27px;
+        position: relative;
     }
 }
