--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -1,17 +1,16 @@
 $imageHeight: 196px;
 
 .Asset{
-    // margin-bottom: 30px;
-    // padding: 0px;
-    // position: relative;
-    // width: 325px;
-    padding: 15px;
+    margin-bottom: 30px;
+    padding: 0px;
+    position: relative;
+    width: 325px;
 
     &__container{
-    //   width: 90%;
-    // height: 298px;
+      width: 90%;
+    height: 298px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
-    // margin: 0 auto;
+    margin: 0 auto;
   }
 
   &__image-holder{
@@ -61,7 +60,6 @@ $imageHeight: 196px;
         color: #ffffff;
         padding-left: 42px;
         z-index: 1;
-        margin: 0;
       }
     }
 
@@ -80,12 +78,12 @@ $imageHeight: 196px;
         font-size: 14px;
     }
 
-    // &-progress-bar{
-    //   width: 100%;
-    //   height: 4px;
-    //   background-color: #d8d8d8;
-    //   margin-top: 5px;
-    // }
+    &-progress-bar{
+      width: 100%;
+      height: 4px;
+      background-color: #d8d8d8;
+      margin-top: 5px;
+    }
 
     &-progress-bar-fill{
       background-image: linear-gradient(272deg, #3ecd5d, #2db84b);
