--- a/src/styles/AssetDetails.scss
+++ b/src/styles/AssetDetails.scss
@@ -4,9 +4,8 @@
   padding-top: 40px;
 
   &__left{
+    padding-left: 0px;
     padding-right: 50px;
-    padding-left: 60px;
-    padding-top: 140px;
 
     @include media('<desktop') {
       padding-right: 0px;
@@ -15,7 +14,6 @@
     &-contribute-btn{
       width: 100%;
       margin-top: 30px;
-      height: 40px;
 
       &:focus, &:hover, &:active{
       }
@@ -36,9 +34,7 @@
 
     &-image-holder-calendar-icon{
       position: relative;
-    top: 0px;
-    display: inline;
-    margin-right: 11px;
+      top: 3px;
     }
 
     &-location{
@@ -65,7 +61,6 @@
       font-size: 14px;
       color: #383838;
       padding-top: 6px;
-      display: inline;
     }
 
     &-funding-wrapper{
@@ -77,7 +72,7 @@
     }
 
     &-funds-raised{
-      border-right: 1px solid #d0d0d0;
+      border-right: 1px solid #575757;
       padding-left: 0px;
       text-align: left;
       padding-right: 20px;
@@ -85,22 +80,19 @@
     }
 
     &-funds-goal{
-      border-right: 1px solid #d0d0d0;
+      border-right: 1px solid #575757;
       padding: 0px 20px;
       height: 57px;
     }
 
     &-funds-investors{
       padding: 0px 20px;
-      text-align: left;
     }
 
     &-funding-title{
       font-size: 14px;
       font-weight: 500;
       color: #383838;
-      text-align: left;
-      margin: 0;
     }
 
     &-funding-value{
@@ -112,9 +104,8 @@
 
     &-calculate-title{
       font-weight: 700;
-      margin-top: 50px;
+      margin-top: 40px;
       font-size: 20px;
-      margin-bottom: 50px;
     }
 
     &-slider-min{
@@ -136,17 +127,16 @@
     }
 
     &-separator{
-      height: 11px;
-      border-right: 1px solid #dddddd;
+      height: 31px;
+      border-right: 1px solid black;
       display: inline-block;
       position: relative;
-      top: 1px;
+      top: 9px;
       margin-right: 10px;
     }
 
     &-contribution-value{
-      color: black;
-      display: inline;
+      color: #125ac4;
     }
 
     &-contribution-bordered{
@@ -156,7 +146,7 @@
 
     &-ownership{
       font-size: 18px;
-      padding-top: 0px;
+      padding-top: 20px;
       padding-right: 10px;
     }
 
@@ -166,9 +156,8 @@
   }
 
   &__right{
-    padding: 20px;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1);
+    padding: 0px 0px;
+    background-color: rgba(231, 232, 235, 0.63);
 
     &-image{
       background: linear-gradient(to left, #24F281, #0083FF);
