--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -1,15 +1,14 @@
 .ExplorePage{
-	// width: 100%;
-	// margin: 0px;
-  // max-width: 1370px;
- 	// margin: 0 auto;
+	width: 100%;
+	margin: 0px;
+  max-width: 1370px;
+ 	margin: 0 auto;
  	padding-top: 60px;
 
   &__container{
     display: flex;
     flex-wrap: wrap;
-		justify-content: left;
-		padding: 0;
+    justify-content: left;
   }
 
 	&__category
@@ -18,12 +17,10 @@
 	    padding: 0px;
 	    height: 310px;
       text-decoration: none;
-			width: 100%;
-			
-			height: 240px;
+      width: 310px;
 
 	    &-name{
-				width: 95%;
+				width: 98%;
 				margin: 0 auto;
 	    	text-align: center;
 				font-size: 36px;
@@ -40,7 +37,7 @@
 	&__image-container{
 		width: 100%;
 		margin: 0 auto;
-		height: 240px;
+		height: 310px;
 		background-size: cover;
 		background-position: center;
 		cursor: pointer;
