--- a/src/styles/PortfolioPage.scss
+++ b/src/styles/PortfolioPage.scss
@@ -1,66 +1,93 @@
-@import 'include-media/dist/_include-media.scss';
-
 .Portfolio{
 
   padding-top: 50px;
 
-  &__cards{
-    display: flex;
-    margin-left: 15px;
-    margin-bottom: 20px;
+  &__tile-expandable{
+      width: 283px;
 
-    @include media('<tablet') {
-      flex-direction: column;
-    }
-  }
-
-  &__card{
-    border-radius: 4px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.15);
-    padding: 10px;
-    margin-right: 30px;
-    display: flex;
-    align-items: center;
-    width: max-content;
-
-    &:nth-child(2){
-      @include media('<tablet') {
-        margin-top: 20px;
+      &:focus{
+        outline: none;
       }
-    }
 
-    b{
-      font-weight: 500;
-      color: rgba(0, 0, 0, 0.65);
-    }
+      & .bx--tile__chevron:focus{
+        outline: none;
+      }
+  }
 
-    &-value--is-green{
-      color: #2db84b !important;
-    }
+  &__tile{
+    height: 78px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 
-    &-separator{
-      background-color: rgba(0, 0, 0, 0.09);
-      width: 1px;
-      height: 14px;
-      display: inline-block;
-      margin: 0px 7px;
-    }
-
-    img{
-      width: 22px;
-      height: 22px;
-      margin-right: 10px;
+    & div{
+      width: 70%;
     }
   }
 
-  &__assets{
-    position: relative;
-    margin-left: 0;
-    margin-right: 0;
-    height: auto;
-    zoom: 1;
-    display: block;
-    box-sizing: border-box;
+  &__empty {
+    color: #575757;
+    background-color: #f5f7fa;
+    text-align: right;
+    font-size: 16px;
+    //Warrning! Hacks! moving from carbon
+    line-height: 22px !important;
+    padding-top: 22px !important;
+    padding-bottom: 22px !important;
+    padding-right: 31px !important;
   }
+
+  & .bx--tile-content__below-the-fold .Portfolio__tile:nth-child(odd){
+    background-color: #f5f7fa;
+  }
+
+  &__tile-img{
+    height: 27px;
+    width: 30px;
+  }
+
+  & .bx--tile--expandable{
+    background-color: #ffffff;
+    padding:  0px 0px;
+  }
+
+  & .bx--tile__chevron svg{
+    fill: #125ac4;
+  }
+
+  & p{
+    padding: 2px 0px;
+    margin: 0px 0px;
+    color: #575757;
+    line-height: 0.9;
+  }
+
+  & b{
+    color: #125ac4;
+  }
+
+  &__revenue{
+    margin-left: 30px;
+  }
+
+  &__revenue b{
+    color: #2db84b;
+  }
+
+  &__wrapper{
+    display: flex;
+  }
+}
+
+
+@media only screen and (max-width: 695px) {
+    .Portfolio__wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .Portfolio__revenue{
+      margin-left: 0px;
+      margin-top: 30px;
+    }
 }
