--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,13 @@
-@import '~antd/dist/antd.css';
-
 @font-face {
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Medium.ttf') format('truetype');
-    font-weight: 500;
+    font-weight: medium;
 }
 
 @font-face {
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Regular.ttf') format('truetype');
-    font-weight: 400;
+    font-weight: normal;
 }
 
 @font-face {
@@ -45,6 +43,10 @@ p{
   letter-spacing: normal !important;
 }
 
+.grid{
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
 
 b{
   font-weight: bold;
@@ -66,26 +68,6 @@ b{
   }
 }
 
-.ant-menu-submenu-popup{
-  z-index: 3 !important;
-
-  a{
-    text-decoration: none !important;
-  }
-
-  .ant-menu-item-selected svg g{
-    fill: #1890ff;
-  }
-
-  .ant-menu-item-active svg g{
-    fill: #1890ff;
-  }
-
-}
-
-.anticon{
-  vertical-align: 0em;
-}
 // Carbon Theme Variables
 $edited: true;
 $brand-01: #125ac4;
