--- a/src/styles/LoadingPage.scss
+++ b/src/styles/LoadingPage.scss
@@ -24,4 +24,13 @@
     text-align: center;
     font-size: 26px;
   }
+
+  &__spin{
+    margin: 0 auto;
+    text-align: center;
+  }
+  &__asset-information-loader {
+    text-align: center;
+    margin-top: 150px;
+  }
 }
