--- a/src/styles/AccountInfo.scss
+++ b/src/styles/AccountInfo.scss
@@ -16,6 +16,7 @@
   &__balance-header{
     font-size: 14px;
     margin: 0;
+
   }
 
   &__balance--is-loading{
@@ -44,6 +45,10 @@
   &__address{
     float: left;
     margin-top: 25px;
+  }
+
+  &__loader {
+    margin-right: 5px;
   }
 
 }
