fixed loaders across dapp

--- a/src/styles/Address.scss
+++ b/src/styles/Address.scss
@@ -10,6 +10,11 @@
     align-items: center;
     width: max-content;
     height: 100%;
+
+    .ant-spin-spinning{
+      margin-right: 10px;
+      margin-top: 7px;
+    }
   }
 
   &__text{
