--- a/src/styles/AppHeader.scss
+++ b/src/styles/AppHeader.scss
@@ -52,6 +52,7 @@
 
     &__exchange-rate--is-loading{
       margin: 0 auto;
+      margin-top: 5px;
     }
     &__tokenprice-label {
       margin: 0;
