fixed styling of asset container and grid of the page

--- a/src/styles/AssetPortfolio.scss
+++ b/src/styles/AssetPortfolio.scss
@@ -20,6 +20,8 @@
     width: 100%;
     background-image: linear-gradient(to left, #0b3f9c, #0083FF) !important;
     z-index: -1;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
   }
 
   &__name{
