--- a/src/styles/ExploreAssetsPage.scss
+++ b/src/styles/ExploreAssetsPage.scss
@@ -19,6 +19,7 @@
 		margin: 6px;
     margin-left: 15px;
     margin-top: 21px;
+    margin-bottom: 40px;
 	}
 
 	&__message-no-elements{
@@ -26,23 +27,5 @@
 		font-size: 20px;
 	    padding-top: 70px;
 	}
-
-  & .bx--btn--primary:disabled{
-      background-color: #125ac4;
-
-      &:hover{
-        background-color: #125ac4;
-      }
-
-      &:active{
-        background-color: #125ac4;
-      }
-
-      &:focus{
-        border: 2px solid #125ac4;
-        outline: none;
-        background-color: #125ac4;
-      }
-  }
 }
 
