--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -1,17 +1,12 @@
 $imageHeight: 196px;
 
 .Asset{
-    // margin-bottom: 30px;
-    // padding: 0px;
-    // position: relative;
-    // width: 325px;
-    padding: 15px;
 
-    &__container{
-    //   width: 90%;
-    // height: 298px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
-    // margin: 0 auto;
+  &__wrapper{
+    margin: 0px 10px 20px 15px;
+    padding: 0px;
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
   }
 
   &__image-holder{
@@ -19,6 +14,8 @@ $imageHeight: 196px;
     background-position: center;
     height: $imageHeight;
     position: relative;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 
       &:after{
         content: ' ';
@@ -36,14 +33,16 @@ $imageHeight: 196px;
         width: 100%;
         background-image: linear-gradient(to left, #0b3f9c, #0083FF) !important;
         z-index: -1;
-        }
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+      }
 
-        &-location-icon{
-          position: absolute;
-          bottom: 18px;
-          left: 21px;
-          z-index: 1;
-        }
+      &-location-icon{
+        position: absolute;
+        bottom: 18px;
+        left: 21px;
+        z-index: 1;
+      }
 
       &-name{
         position: absolute;
@@ -67,41 +66,52 @@ $imageHeight: 196px;
 
     &__details{
 
-      padding: 5px 10px 0px 10px;
+    padding: 5px 10px 0px 10px;
+
+    &--is-funded{
+
+      svg{
+        fill: #52c41a;
+        margin-left: 8px;
+      }
+
+      .ant-progress {
+        padding-right: calc(1em + 8px);
+        margin-right: calc(-1em - 8px);
+      }
+    }
 
     &-funded{
       width: max-content;
-        float: left;
-        font-size: 14px;
+      float: left;
+      font-size: 14px;
     }
 
     &-goal{
-        text-align: right;
-        font-size: 14px;
-    }
-
-    // &-progress-bar{
-    //   width: 100%;
-    //   height: 4px;
-    //   background-color: #d8d8d8;
-    //   margin-top: 5px;
-    // }
-
-    &-progress-bar-fill{
-      background-image: linear-gradient(272deg, #3ecd5d, #2db84b);
-      height: 4px;
+      text-align: right;
+      font-size: 14px;
     }
 
     &-contribute{
-        margin-top: 15px;
-        height: 32px;
-        font-size: 14px;
-        width: 126px;
-        border: none;
-        position: relative;
-        left: 50%;
-        transform: translate(-50%,0);
-        cursor: pointer;
+      margin-top: 15px;
+      height: 32px;
+      font-size: 14px;
+      width: 126px;
+      border: none;
+      position: relative;
+      left: 50%;
+      transform: translate(-50%,0);
+      cursor: pointer;
+      margin-bottom: 15px;
     }
+
+    .ant-progress-text{
+      display: none;
     }
+
+    .ant-progress-show-info .ant-progress-outer{
+      padding-right: 0px;
+      margin-right: 0px;
+    }
+  }
 }
