--- a/src/styles/AssetDetails.scss
+++ b/src/styles/AssetDetails.scss
@@ -7,8 +7,8 @@
     padding-left: 60px;
 
     @include media('<desktop') {
-      padding: 0px 0px;
-      margin-top: 40px;
+      // padding: 0px 0px;
+      // margin-top: 40px;
     }
 
     &-contribute-btn{
