--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -65,7 +65,7 @@ $imageHeight: 196px;
     }
 
     &__details{
-
+    background-color: #ffffff;
     padding: 5px 10px 0px 10px;
 
     &--is-funded{
