--- a/src/styles/Notification.scss
+++ b/src/styles/Notification.scss
@@ -1,7 +1,14 @@
+@import 'include-media/dist/_include-media.scss';
+
 .Notification__alert-wrapper {
   position: absolute;
   top: 93px;
   right: 5px;
-  width: 250px;
+  max-width: 400px;
+  width: 100%;
   min-height: 45px;
+  
+  @include media('<1320px') {
+    top: 150px;
+  } 
 }
