implement bancor widget to myBit go

--- a/src/styles/AppHeader.scss
+++ b/src/styles/AppHeader.scss
@@ -9,6 +9,7 @@
     position: relative;
     justify-content: space-between;
     flex-wrap: wrap;
+    overflow: hidden;
 
     &__logo-and-info{
       display: flex;
@@ -65,5 +66,13 @@
         display: inline-block;
         height: 100%;
         display: flex;
+    }
+    &__BancrorWidget-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      max-width: 305px;
+      width: 100%;
     }
 }
