--- a/src/styles/Address.scss
+++ b/src/styles/Address.scss
@@ -1,3 +1,5 @@
+@import 'include-media/dist/_include-media.scss';
+
 .Address{
   height: 100%;
   margin-right: 20px;
@@ -36,6 +38,10 @@
     justify-content: center;
     align-items: center;
   }
+
+  @include media('<680px') {
+    display: none;
+  } 
 }
 
 .AppHeader .paper{
