add padding to AppHeader

--- a/src/styles/AppHeader.scss
+++ b/src/styles/AppHeader.scss
@@ -4,6 +4,7 @@
     height: $headerHeight;
     background-image: linear-gradient(64deg, #001358, #125ac4);
     margin: 0px 0px;
+    padding: 0 50px;
     color: white;
     display: flex;
     position: relative;
