change notification message in Confirmation PopUp, moved Notification component to App.js

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,7 @@
+.notification_wrapper {
+  display: block;
+  position: relative;
+}
 .page-wrapper{
 	padding: 0px 20px 0px 20px;
   max-width: 1400px;
