--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -3,7 +3,38 @@
 	// margin: 0px;
   // max-width: 1370px;
  	// margin: 0 auto;
- 	padding-top: 60px;
+ 	padding-top: 50px;
+  margin-bottom: 50px;
+
+  &__filters{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+
+    &--is-switch{
+      margin-right: 5px;
+      span{
+        font-family: Roboto;
+        font-size: 14px;
+        text-align: right;
+        color: #4a4a4a;
+        margin-right: 10px;
+        position: relative;
+      }
+
+      .ant-switch span{
+        color: white;
+      }
+    }
+  }
+
+  &__pagination{
+    position: relative;
+    position: absolute;
+    top: 100%;
+    left: 15px;
+  }
 
   &__container{
     display: flex;
@@ -19,7 +50,7 @@
 	    height: 310px;
       text-decoration: none;
 			width: 100%;
-			
+
 			height: 240px;
 
 	    &-name{
