--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -3,7 +3,7 @@
 	// margin: 0px;
   // max-width: 1370px;
  	// margin: 0 auto;
- 	padding-top: 50px;
+ 	margin-top: 25px;
   margin-bottom: 50px;
 
   &__filters{
