remove "back" button, add "close" button  after success transation

--- a/src/styles/ConfirmationPopup.scss
+++ b/src/styles/ConfirmationPopup.scss
@@ -78,6 +78,15 @@
     left: 0px;
     margin-top: 80px;
   }
+  &--is-success {
+    .ant-modal-footer{
+      div {
+        button:first-of-type{
+          display: none;
+        }
+      }
+    }
+  }
 }
 
 
