fixed font-weight for buttons

--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -2,6 +2,10 @@ $imageHeight: 196px;
 
 .Asset{
 
+  button{
+    font-weight: 500;
+  }
+
   &__wrapper{
     margin: 0px 10px 20px 15px;
     padding: 0px;
