--- a/src/styles/NavigationBar.scss
+++ b/src/styles/NavigationBar.scss
@@ -5,11 +5,13 @@
     text-decoration: none;
   }
 
-  .ant-menu-item-selected svg g{
+  .ant-menu-item-selected svg g,
+  .ant-menu-item-selected svg path{
     fill: #1890ff;
   }
 
-  .ant-menu-item-active svg g{
+  .ant-menu-item-active svg g,
+  .ant-menu-item-active svg path{
     fill: #1890ff;
   }
 }
