--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,10 +27,14 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto';
+  font-family: 'Roboto' !important;
   position: relative;
   font-weight: normal;
   background-color: #ffffff;
+}
+
+[class*='ant'] {
+  font-family: 'Roboto' !important;
 }
 
 html, body {
