Onboarding page functionality finished - next: need to copy the actual text from the figma mockups

--- a/src/styles/OnboardingPage.scss
+++ b/src/styles/OnboardingPage.scss
@@ -27,16 +27,23 @@
 }
 
 .Onboarding__main-title {
+    line-height: 48px;
     margin-top: 30px;
     font-size: 38px;
     font-weight: bold;
     color: #000000;
+    > .Onboarding__main-title-blue {
+      color: #1890ff;
+    }
+    > .Onboarding__main-title-red {
+      color: red;
+    }
 }
 
 .Onboarding__paragraph-title {
     font-size: 18px;
     font-weight: bold;
-    color: #000000;
+    color: #4a4a4a;
 }
 
 .Onboarding__paragraph {
@@ -64,4 +71,61 @@
     background-color: #1890ff;
     border: 1px solid #1890ff;
     color: #ffffff;
+}
+
+.Onboarding__back-button {
+  position: absolute;
+  bottom: 20px;
+  left: 0px;
+}
+
+.Onboarding__next-button-arrow {
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+.Onboarding__img {
+  margin: 0px auto;
+}
+
+.Onboarding__slider-navigation {
+  text-align: center;
+  margin-top: 30px;
+  width: 100%;
+}
+
+.Onboarding__slider-nav-button {
+  width: 12px;
+  height: 12px;
+  background: black;
+  border-radius: 6px;
+  padding: 0;
+  margin: 0 4px;
+  border: none;
+  background: #dedede;
+  &:hover, &:focus {
+    background: #dedede;
+  }
+  &.active-slide {
+    background: #1890ff;
+    &:hover, &:focus {
+      background: #1890ff;
+    }
+  }
+}
+
+.Onboarding__tooltip-inner {
+    .ant-tooltip-content {
+        box-shadow: 1px 5px 20px 2px rgba(0,0,0,0.2);
+        border-radius: 4px;
+    }
+    .ant-tooltip-inner {
+        background-color: #ffffff;
+        color: #4a4a4a;
+        padding: 10px;
+        max-width: 200px;
+    }
+    .ant-tooltip-arrow {
+        border-top-color: #ffffff;
+    }
 }
