--- a/src/styles/OnboardingPage.scss
+++ b/src/styles/OnboardingPage.scss
@@ -10,7 +10,6 @@
 }
 
 .ant-carousel .slick-slide {
-    z-index: 3;
     padding: 10px 40px;
 }
 
@@ -22,30 +21,36 @@
     max-width: 620px;
 }
 
-.Onboarding__mybit-logo {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    @media screen and (max-width: 600px) {
-        display: none;
+.Onboarding__img {
+    &-default {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        @media(max-width: 600px) {
+            display: none !important;
+        }
     }
-}
-
-.Onboarding__key-img {
-    position: absolute;
-    top: 40px;
-    right: 20px;
-    @media screen and (max-width: 600px) {
-        display: none;
+    &-key {
+        position: absolute;
+        top: 40px;
+        right: 20px;
+        @media(max-width: 600px) {
+            display: none !important;
+        }
     }
-}
-
-.Onboarding__setup-img {
-    position: absolute;
-    top: 140px;
-    right: 10px;
-    @media screen and (max-width: 600px) {
-        display: none;
+    &-setup {
+        position: absolute;
+        top: 140px;
+        right: 10px;
+        @media(max-width: 600px) {
+            display: none !important;
+        }
+    }
+    &-static {
+        margin: 0px auto;
+        @media(max-width: 600px) {
+            display: none !important;
+        }
     }
 }
 
@@ -55,10 +60,14 @@
     font-size: 38px;
     font-weight: bold;
     color: #000000;
-    > .Onboarding__main-title-blue {
+    @media(max-width: 600px) {
+        font-size: 32px;
+        line-height: 38px;
+    }
+    &--blue {
       color: #1890ff;
     }
-    > .Onboarding__main-title-red {
+    &--red {
       color: red;
     }
 }
@@ -68,49 +77,78 @@
     font-weight: bold;
     color: #4a4a4a;
     width: 80%;
+    @media(max-width: 600px) {
+        width: 100%;
+    }
 }
 
 .Onboarding__paragraph {
     font-size: 18px;
     color: #4a4a4a;
     line-height: 24px;
-    &.full-width {
+    width: 63%;
+    @media(max-width: 600px) {
         width: 100%;
+        font-size: 16px;
     }
-    &.width-80 {
+    &--full {
+        font-size: 18px;
+        color: #4a4a4a;
+        line-height: 24px;
+        width: 100%;
+        @media(max-width: 600px) {
+            font-size: 16px;
+        }
+    }
+    &--80 {
+        font-size: 18px;
+        color: #4a4a4a;
+        line-height: 24px;
         width: 80%;
-    }
-    &.width-65 {
-        width: 63%;
+        @media(max-width: 600px) {
+            font-size: 16px;
+            width: 100%;
+        }
     }
 }
 
-.Onboarding__next-button {
+.Onboarding__buttons {
     position: absolute;
     bottom: 20px;
     right: 0px;
-    background-color: #1890ff;
-    border: 1px solid #1890ff;
-    color: #ffffff;
-    font-weight: 350;
-    &:hover, &:focus {
-        background-color: #1890ff;
-        color: #ffffff;
+    @media(max-width: 600px) {
+        position: static;
     }
-}
-
-.Onboarding__next-button-arrow {
-    font-size: 12px;
-}
-
-.Onboarding__back-button {
-  position: absolute;
-  bottom: 20px;
-  left: 0px;
-}
-
-.Onboarding__img {
-  margin: 0px auto;
+    &-next {
+        font-weight: 350;
+        &-arrow {
+            font-size: 12px;
+        }
+        @media(max-width: 600px) {
+            position: static;
+            display: block;
+            margin: 10px auto;
+        }
+    }
+    &-skip {
+        border: none;
+        color: #1890ff;
+        @media(max-width: 600px) {
+            position: static;
+            display: block;
+            margin: 10px auto;
+        }
+    }
+    &-back {
+        position: absolute;
+        bottom: 20px;
+        left: 0px;
+        @media(max-width: 600px) {
+            position: static;
+            display: block;
+            margin: 10px auto;
+        }
+    }
 }
 
 .Onboarding__slider-navigation {
@@ -159,6 +197,9 @@
     padding: 0;
     list-style: none;
     margin-top: 60px;
+    @media(max-width: 600px) {
+        margin-top: 10px;
+    }
     &.no-margin-list {
         margin-top: 10px;
     }
@@ -168,6 +209,9 @@
     margin: 5px 0px 5px 20px;
     font-size: 18px;
     position: relative;
+    @media(max-width: 600px) {
+       font-size: 16px;
+    }
     &::before {
         content: "•"; 
         font-size: 28px;
