--- a/src/styles/OnboardingPage.scss
+++ b/src/styles/OnboardingPage.scss
@@ -110,6 +110,17 @@
             width: 100%;
         }
     }
+    &--80--mt {
+        font-size: 18px;
+        color: #4a4a4a;
+        line-height: 24px;
+        width: 80%;
+        margin: 15px 0px 5px 0px;
+        @media(max-width: 600px) {
+            font-size: 16px;
+            width: 100%;
+        }
+    }
 }
 
 .Onboarding__buttons {
@@ -151,6 +162,14 @@
             display: block;
             margin: 10px auto;
         }
+    }
+    &-get {
+        border: none;
+        text-decoration: underline;
+        color: #1890ff;
+        display: inline-block;
+        margin-left: 5px;
+        font-size: 18px;
     }
 }
 
