--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -96,3 +96,18 @@ b{
     }
   }
 }
+
+.ant-tooltip {
+  .ant-tooltip-content {
+    box-shadow: 1px 5px 20px 2px rgba(0,0,0,0.2);
+    border-radius: 4px;
+    .ant-tooltip-inner {
+      background-color: #ffffff;
+      color: #4a4a4a;
+      padding: 10px;
+    }
+    .ant-tooltip-arrow {
+      border-top-color: #ffffff;
+    }
+  }
+}
