--- a/src/styles/PortfolioPage.scss
+++ b/src/styles/PortfolioPage.scss
@@ -29,6 +29,10 @@
       }
     }
 
+    &-buttons {
+      margin-left: auto;
+    }
+
     b{
       font-weight: 500;
       color: rgba(0, 0, 0, 0.65);
