--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -112,17 +112,20 @@ b{
   }
 }
 
-.ant-alert-with-description{
-  padding: 15px 35px 15px 64px;
-}
+.Notifications{
+  .ant-alert-with-description{
+    padding: 15px 35px 15px 64px;
+  }
 
-.ant-alert{
-  position: fixed !important;
-  z-index: 100000;
-  right: 20px;
-  max-width: 500px;
+  .ant-alert{
+    position: fixed !important;
+    z-index: 100000;
+    right: 20px;
+    max-width: 500px;
 
-  & a:focus{
-    text-decoration: none;
+    & a:focus{
+      text-decoration: none;
+    }
   }
 }
+
