--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -77,13 +77,17 @@ b{
 
 
 .MetaMaskErrors{
-  background-color: red;
+  background-color: orange;
   color: white;
   text-align: center;
   font-family: Roboto;
   font-weight: 600;
   position: relative;
   top: 0px;
+
+  & p{
+    padding: 2px 0px;
+  }
 
   & a{
     color: white;
