--- a/src/styles/ValueDisplay.scss
+++ b/src/styles/ValueDisplay.scss
@@ -1,10 +1,11 @@
 .ValueDisplay{
   background: #FFFFFF;
   border-radius: 4px;
-  padding: 10px;
+  padding: 3px;
   display: flex;
   align-items: center;
   width: max-content;
+  padding-left: 10px;
 
   &__icon{
     margin-right: 5px;
@@ -20,5 +21,27 @@
     top: 1px;
     margin-right: 10px;
     margin-left: 10px;
+  }
+
+  &__value{
+    padding: 4px;
+
+    &--is-blue{
+      background-color: rgba(24, 144, 255, 0.1);
+      color: #1890FF;
+      border-radius: 4px;
+      font-size: 16px;
+    }
+
+    &--is-green{
+      background-color: #F6FFED;
+      color: #52C41A;
+      border-radius: 4px;
+      font-size: 16px;
+    }
+  }
+
+  &--has-shadow{
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.15);
   }
 }
