--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -118,15 +118,24 @@ b{
 }
 
 .Notifications{
+  position: fixed;
+  z-index: 10;
+  bottom: 0px;
+  right: 0px;
+  display: flex;
+  flex-direction: column-reverse;
+
+
   .ant-alert-with-description{
     padding: 15px 35px 15px 64px;
   }
 
   .ant-alert{
-    position: fixed !important;
+    position: relative;
     z-index: 100000;
     right: 20px;
     max-width: 500px;
+    margin-bottom: 20px;
 
     & a:focus{
       text-decoration: none;
