cleaned up a few things

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -154,3 +154,10 @@ b{
     cursor: pointer;
   }
 }
+
+.ManagedAsset__error{
+  text-align: center;
+  font-size: 26px;
+  margin-top: 100px;
+  padding: 0px 40px;
+}
