refactored server.js and fixed a css property that caused the bancor button to not be centered inside its div

--- a/src/styles/AppHeader.scss
+++ b/src/styles/AppHeader.scss
@@ -71,7 +71,7 @@
     }
     &__BancrorWidget-container {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       flex-wrap: wrap;
       max-width: 305px;
